Fix layout shifting in side nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a {
     --bcg-clr-header: white;
     --bcg-clr-nav: rgba(229, 80, 57,1.0);
     --bcg-clr-main: yellow;
-    --bcg-clr-sidecontent: green;
+    --bcg-clr-sidecontent: lightgreen;
     /* Nav clr palette */
     --txt-clr-nav-items: rgba(255, 255, 255, 100%); 
     --txt-clr-nav-hover: rgba(96, 163, 188,1.0);
@@ -31,20 +31,24 @@ a {
     --bcg-clr-header-btn: rgba(74, 105, 189,1.0);
     --bcg-clr-header-btn-hover: rgb(19, 58, 167);
     --txt-clr-header-btn: rgba(247, 241, 227,1.0);
+    /* main clr palette */
+    --bcg-clr-cards: rgba(255, 218, 121,1.0);
+
 
     /* Gaps, margins & paddings */
     /* header */
     --padding-search: 1rem 2rem;
 
     /* Nav */
-    --gap-nav-rows: 2rem;
+    --gap-nav-rows: 10px 15px;
     --margin-list-btm: .5rem;
     --margin-list-left: 1rem;
 
 
     /* fonts */
-
-
+    /* header */
+    --txt-size-header-user: 1.1rem;
+    --txt-size-header-user-full: 1.5rem;
     /* Nav */
     --logo-font-size: 1.4rem;
     --logo-font: "Poppins", sans-serif;
@@ -52,7 +56,7 @@ a {
 
 body {
     display: grid;
-    grid-template: minmax(9rem, 10rem) 1fr/ minmax(13.6rem,18.8rem) 3fr 1fr;
+    grid-template: minmax(9rem, 10rem) 1fr/ minmax(13.6rem,18.8rem) 3fr minmax(13.6rem,23rem);
     grid-template-areas: 
         "nav header header"
         "nav main side-content";
@@ -126,25 +130,70 @@ header input[type="text"] {
 }
 
 header .profile-container-small {
-    height: 2.5rem; width: 2.5rem;
+    height: 2.7rem; width: 2.7rem;
     border: 1px solid currentColor;
     border-radius: 2.5rem;
 }
 
-
-header .profile-container-medium {
-    width: 3.7rem; height: 3.7rem;
-    border: 1px solid currentColor;
-    border-radius: 3.7rem;
+header .profile-container-small>img {
+    height: 100%; 
+    width: auto;
+    border-radius: inherit;
 }
 
 
+header .profile-container-medium {
+    width: 4rem; height: 4rem;
+    border: 1px solid currentColor;
+    border-radius: 4rem;
+}
+
+header .profile-container-medium>img {
+    height: 100%;
+    width: auto;
+    border-radius: inherit;
+}
+
+.welcome-container>p {
+    font-size: .7rem;
+    font-weight: 500;
+}
 
 
+.btn-modifier {
+    text-align: center;
+    vertical-align: bottom;
+    color: var(--txt-clr-header-btn);
+    padding: .3rem .2rem;
+    width: 6rem; height: 2rem;
+    background-color: var(--bcg-clr-header-btn);
+    border: .1rem solid var(--bcg-clr-header);
+    border-radius: 1rem;
+    cursor: pointer;
+    transition: all .4s ease ;
+}
 
-/* .header-grid-items {
-    grid-template-columns: ;
-} */
+
+.profile-name-container {
+    font-size: var(--txt-size-header-user);
+    font-weight: 500;
+}
+
+.profile-name-container-full {
+    font-size: var(--txt-size-header-user-full);
+    font-weight: 500;
+}
+
+.header-hover:hover {
+    background-color: var(--bcg-clr-header-btn-hover);
+}
+
+.svg {
+    cursor: pointer;
+}
+.svg:hover {
+    color:var(--bcg-clr-header-btn-hover);
+}
 
 /* Nav */
 .logo {
@@ -152,10 +201,12 @@ header .profile-container-medium {
     text-transform: uppercase;
     font-size: var(--logo-font-size);
     font-weight: 600;
+    align-self: start;
 }
 
 .grid-rows {
     display: grid;
+    grid-template-rows: minmax(9rem, 10rem) 1fr 7rem ;
     gap: var(--gap-nav-rows);
 }
 
@@ -182,19 +233,26 @@ header .profile-container-medium {
     align-items: center;
 }
 
-.btn-modifier {
-    text-align: center;
-    vertical-align: bottom;
-    color: var(--txt-clr-header-btn);
-    padding: .3rem .2rem;
-    width: 6rem; height: 2rem;
-    background-color: var(--bcg-clr-header-btn);
-    border: .1rem solid var(--bcg-clr-header);
-    border-radius: 1rem;
-    cursor: pointer;
-    transition: all .4s ease ;
+/* main */
+
+main h1 {
+    font-size: 1.3rem;
 }
 
-.btn-modifier:hover {
-    background-color: var(--bcg-clr-header-btn-hover);
+main .card {
+    width: 70ch;
+    height: auto;
+    border: .1rem solid currentColor;
+    border-radius: .7rem;
+    padding: 1rem .8rem;
+    background-color: var(--bcg-clr-cards);
+}
+
+main .project-content {
+    margin-bottom: 2rem;
+}
+
+main .utilities-container::before {
+    content: "";
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="%235f6368"><path d="M696-96q-50 0-85-35t-35-85q0-8 1-14.5t3-14.5L342-390q-15 16-35.35 23-20.36 7-42.65 7-50 0-85-35t-35-85q0-50 35-85t85-35q22 0 42.5 7.5T342-570l238-145q-2-8-3-14.5t-1-14.5q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35q-22.29 0-42.65-7Q633-638 618-654L380-509q2 8 3 14.5t1 14.5q0 8-1 14.5t-3 14.5l238 145q15-17 35.35-23.5Q673.71-336 696-336q50 0 85 35t35 85q0 50-35 85t-85 35Zm0-600q20.4 0 34.2-13.8Q744-723.6 744-744q0-20.4-13.8-34.2Q716.4-792 696-792q-20.4 0-34.2 13.8Q648-764.4 648-744q0 20.4 13.8 34.2Q675.6-696 696-696ZM264-432q20.4 0 34.2-13.8Q312-459.6 312-480q0-20.4-13.8-34.2Q284.4-528 264-528q-20.4 0-34.2 13.8Q216-500.4 216-480q0 20.4 13.8 34.2Q243.6-432 264-432Zm432 264q20.4 0 34.2-13.8Q744-195.6 744-216q0-20.4-13.8-34.2Q716.4-264 696-264q-20.4 0-34.2 13.8Q648-236.4 648-216q0 20.4 13.8 34.2Q675.6-168 696-168Zm0-576ZM264-480Zm432 264Z"/></svg>)');
 }
